cot-macros/tests/ui/derive_api_operation_response_enum.stderr
error: Only enums can derive `ApiOperationResponse`
 --> tests/ui/derive_api_operation_response_enum.rs:4:10
  |
4 | #[derive(ApiOperationResponse)]
  |          ^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `ApiOperationResponse` (in Nightly builds, run with -Z macro-backtrace for more info)
